@@ -68,7 +68,7 @@ setMethod(
   definition = function(x, y, clusterLabel=NULL,...) {
     mat<-matrix(y,ncol=1)
     if(!is.null(clusterLabel)) colnames(mat)<-clusterLabel
-    addClusters(x,y,...)
+    addClusters(x,mat,...)
   }
 )
 
